--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: futsal
+name: smartfutsal
 description: A new Flutter project.
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
@@ -31,7 +31,6 @@ dependencies:
   flutter:
     sdk: flutter
   device_preview: ^1.1.0     
- 
   photo_view : ^0.14.0
 
 
@@ -62,6 +61,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
+  # assets:
+  #   - images/a_dot_burr.jpeg
+  #   - images/a_dot_ham.jpeg
   assets:
     - assets/Courts1.png
     - assets/Courts2.png
@@ -82,7 +84,6 @@ flutter:
     - assets/profilep.jpg
     - assets/fplayer.png
     - assets/gmap.png
-  #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
@@ -96,19 +97,16 @@ flutter:
   # list giving the asset and other descriptors for the font. For
   # example:
   # fonts:
-  #   # - family: Schyler
-  #   #   fonts:
-  #   #     - asset: fonts/Schyler-Regular.ttf
-  #   #     - asset: fonts/Schyler-Italic.ttf
-  #   #       style: italic
+  #   - family: Schyler
+  #     fonts:
+  #       - asset: fonts/Schyler-Regular.ttf
+  #       - asset: fonts/Schyler-Italic.ttf
+  #         style: italic
   #   - family: Trajan Pro
   #     fonts:
   #       - asset: fonts/TrajanPro.ttf
   #       - asset: fonts/TrajanPro_Bold.ttf
   #         weight: 700
-  #   - family: Source Sans 3
-  #     fonts:
-  #       - asset: assets/fonts/SourceSans3-VariableFont_wght.ttf
-  # #
+  #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
