--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
     sdk: flutter
   device_preview: ^1.1.0     
   photo_view : ^0.14.0
+  carousel_slider: ^4.0.0
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -84,7 +85,15 @@ flutter:
     - assets/profilep.jpg
     - assets/fplayer.png
     - assets/gmap.png
-
+    - assets/logo.png
+    - assets/lg.png
+    - assets/lg2.png
+    - assets/cricket.jpg
+    - assets/football.jpg
+    - assets/badminton.jpg
+    - assets/stad1.jpg
+    - assets/stad2.jpg
+    - assets/stad3.jpg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
 
