--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -85,6 +85,9 @@ flutter:
     - assets/stad1.jpg
     - assets/stad2.jpg
     - assets/stad3.jpg
+    - assets/boots.png
+    - assets/sportskit.png
+    - assets/equipments.png
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
 
