--- a/backend/package.json
+++ b/backend/package.json
@@ -18,7 +18,9 @@
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.29.4",
     "mongoose": "^7.6.3",
-    "nodemon": "^3.0.1",
     "ws": "^8.14.2"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1"
   }
 }
