--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,7 +36,7 @@ dependencies:
   http: ^1.1.0
   shared_preferences: ^2.2.2
   quickalert: ^1.0.2
-  image_picker: ^1.0.4  
+  image_picker: ^1.0.4
   video_player: ^2.8.1
   mime: ^1.0.4
 
@@ -44,6 +44,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   flutter_spinkit: ^5.2.0
+  rive: 0.11.11
+  animated_text_kit: ^4.2.2
+
   # rive: ^0.9.1
   # flutter_svg: ^1.1.6
 
@@ -106,7 +109,10 @@ flutter:
     - assets/prof.png
     - assets/Booknow.png
     - assets/Booknowlogo.png
- 
+    - assets/avaters/
+    - assets/Backgrounds/
+    - assets/icons/
+    - assets/RiveAssets/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
