added forgot password ui

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -113,6 +113,7 @@ flutter:
     - assets/Backgrounds/
     - assets/icons/
     - assets/RiveAssets/
+    - assets/password.jpg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
